# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\ApiAuthorController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\ApiChismeController;
@@ -23,4 +24,9 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/chismes', [ApiChismeController::class, 'index']);
     Route::post('/chismes', [ApiChismeController::class, 'store']);
     Route::get('/chismes/{id}', [ApiChismeController::class, 'show']);
+});
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::get('/authors', [ApiAuthorController::class, 'index']);
+    Route::get('/authors/{id}', [ApiAuthorController::class, 'show']);
 });
